@@ -13,17 +13,14 @@
  **/
 package org.bonitasoft.engine.business.application.importer;
 
-import static org.bonitasoft.engine.commons.io.IOUtil.unzip;
-
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URL;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
+import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
 import org.bonitasoft.engine.api.ImportError;
 import org.bonitasoft.engine.api.ImportStatus;
@@ -55,10 +52,9 @@ import org.springframework.stereotype.Component;
 @Component
 @Slf4j
 //must be initialized after PageService
-@Order(5)
+@Order(6)
 public class ApplicationImporter implements TenantLifecycleService {
 
-    public static final String PROVIDED_FINAL_APPLICATIONS_PATH = "org/bonitasoft/web/application/final";
     public static final String PROVIDED_APPLICATIONS_PATH = "org/bonitasoft/web/application";
     private final ApplicationService applicationService;
     private final NodeToApplicationConverter nodeToApplicationConverter;
@@ -66,6 +62,12 @@ public class ApplicationImporter implements TenantLifecycleService {
     private final ApplicationMenuImporter applicationMenuImporter;
     private final ResourcePatternResolver cpResourceResolver = new PathMatchingResourcePatternResolver(
             ApplicationImporter.class.getClassLoader());
+
+    /**
+     * Boolean used to import provided editable applications if there are missing (mostly when it is a first install)
+     */
+    @Setter
+    private boolean addIfMissing;
 
     public ApplicationImporter(ApplicationService applicationService,
             NodeToApplicationConverter nodeToApplicationConverter, ApplicationPageImporter applicationPageImporter,
@@ -87,7 +89,7 @@ public class ApplicationImporter implements TenantLifecycleService {
                 applicationService.updateApplication(application, updateBuilder.done());
             } catch (SObjectNotFoundException e) {
                 importResult.getImportStatus()
-                        .addErrorsIfNotExists(Arrays.asList(
+                        .addErrorsIfNotExists(List.of(
                                 new ImportError(applicationNode.getHomePage(), ImportError.Type.APPLICATION_PAGE)));
             }
         }
@@ -153,21 +155,21 @@ public class ApplicationImporter implements TenantLifecycleService {
         return importStatus;
     }
 
-    private List<ImportStatus> importDefaultApplications(final byte[] xmlContent, byte[] iconContent,
-            String iconMimeType,
-            boolean editable, boolean addIfMissing) throws ImportException, AlreadyExistsException {
+    private List<ImportStatus> importProvidedEditableApplications(final byte[] xmlContent, byte[] iconContent,
+            String iconMimeType, boolean addIfMissing) throws ImportException, AlreadyExistsException {
         List<ImportStatus> importStatuses = new ArrayList<>();
         ApplicationNodeContainer applicationNodeContainer = getApplicationNodeContainer(xmlContent);
         for (ApplicationNode applicationNode : applicationNodeContainer.getApplications()) {
+            // import the provided application as editable and set the strategy to skip it if a version already exists
             importStatuses.add(
-                    importApplication(applicationNode, editable, SessionService.SYSTEM_ID, iconContent, iconMimeType,
+                    importApplication(applicationNode, true, SessionService.SYSTEM_ID, iconContent, iconMimeType,
                             addIfMissing,
                             new UpdateNewerNonEditableApplicationStrategy()));
         }
         return importStatuses;
     }
 
-    private ApplicationNodeContainer getApplicationNodeContainer(byte[] xmlContent) throws ImportException {
+    public ApplicationNodeContainer getApplicationNodeContainer(byte[] xmlContent) throws ImportException {
         ApplicationNodeContainer result;
         final URL resource = ApplicationNodeContainer.class.getResource("/application.xsd");
         try {
@@ -181,16 +183,7 @@ public class ApplicationImporter implements TenantLifecycleService {
     @Override
     public void init() throws SBonitaException {
         try {
-            List<ImportStatus> importStatuses = importProvidedApplicationsFromClasspath(
-                    PROVIDED_FINAL_APPLICATIONS_PATH, false, true);
-            boolean addIfMissing = importStatuses.stream().map(ImportStatus::getStatus)
-                    .allMatch(status -> status != ImportStatus.Status.SKIPPED);
-            if (addIfMissing) {
-                log.info("Detected a first run since a Bonita update, Bonita upgrade, " +
-                        "a tenant creation or an installation from scratch  importing default applications");
-            }
-            importStatuses
-                    .addAll(importProvidedApplicationsFromClasspath(PROVIDED_APPLICATIONS_PATH, true, addIfMissing));
+            List<ImportStatus> importStatuses = importProvidedEditableApplicationsFromClasspath();
 
             List<String> createdOrReplaced = importStatuses.stream()
                     .filter(importStatus -> importStatus.getStatus() != ImportStatus.Status.SKIPPED)
@@ -208,62 +201,33 @@ public class ApplicationImporter implements TenantLifecycleService {
         }
     }
 
-    private List<ImportStatus> importProvidedApplicationsFromClasspath(String path, boolean editable,
-            boolean addIfMissing)
-            throws IOException, ImportException {
+    private List<ImportStatus> importProvidedEditableApplicationsFromClasspath() throws IOException, ImportException {
+        if (addIfMissing) {
+            log.info("Detected a first run since a Bonita update, a Bonita upgrade, " +
+                    "a tenant creation or an installation from scratch. Importing default applications");
+        }
         List<ImportStatus> importStatuses = new ArrayList<>();
         Resource[] resources = cpResourceResolver
                 .getResources(
-                        ResourcePatternResolver.CLASSPATH_ALL_URL_PREFIX + "/" + path + "/*.zip");
+                        ResourcePatternResolver.CLASSPATH_ALL_URL_PREFIX + "/" + PROVIDED_APPLICATIONS_PATH + "/*.zip");
         for (Resource resource : resources) {
             if (resource.exists() && resource.isReadable() && resource.contentLength() > 0) {
                 String resourceName = resource.getFilename();
                 log.debug("Found provided applications '{}' in classpath", resourceName);
                 try (InputStream resourceAsStream = resource.getInputStream()) {
-                    ZipContent zipContent = getZipContent(resourceName, resourceAsStream);
-                    importStatuses.addAll(importDefaultApplications(zipContent.xmlRaw, zipContent.iconRaw,
-                            zipContent.pngName, editable, addIfMissing));
+                    ApplicationZipContent zipContent = ApplicationZipContent.getApplicationZipContent(resourceName,
+                            resourceAsStream);
+                    importStatuses
+                            .addAll(importProvidedEditableApplications(zipContent.getXmlRaw(), zipContent.getIconRaw(),
+                                    zipContent.getPngName(), addIfMissing));
                 } catch (IOException | ImportException | AlreadyExistsException e) {
                     throw new ImportException(e);
                 }
             } else {
                 throw new ImportException(
-                        "A resource " + resource + "could not be read when loading default applications");
+                        "A resource " + resource + " could not be read when loading default applications");
             }
         }
         return importStatuses;
-    }
-
-    private ZipContent getZipContent(String resourceName, InputStream resourceAsStream)
-            throws IOException, ImportException {
-        final byte[] content = org.apache.commons.io.IOUtils.toByteArray(resourceAsStream);
-        Map<String, byte[]> zipContent = unzip(content);
-        List<String> pngFileNamesList = zipContent.keySet().stream().filter(l -> l.endsWith(".png"))
-                .collect(Collectors.toList());
-        List<String> xmlFileNamesList = zipContent.keySet().stream().filter(l -> l.endsWith(".xml"))
-                .collect(Collectors.toList());
-        if (xmlFileNamesList.size() > 1) {
-            throw new ImportException("The application zip " + resourceName
-                    + " contains more than one xml descriptor, and therefore has an invalid format");
-        } else if (pngFileNamesList.size() > 1) {
-            throw new ImportException("The application zip " + resourceName
-                    + " contains more than one icon file, and therefore has an invalid format");
-        }
-        String pngName = pngFileNamesList.get(0);
-        String xmlName = xmlFileNamesList.get(0);
-        return new ZipContent(zipContent.get(pngName), zipContent.get(xmlName), pngName);
-    }
-
-    private class ZipContent {
-
-        public final byte[] iconRaw;
-        public final byte[] xmlRaw;
-        public final String pngName;
-
-        ZipContent(byte[] iconRaw, byte[] xmlRaw, String pngName) {
-            this.iconRaw = iconRaw;
-            this.xmlRaw = xmlRaw;
-            this.pngName = pngName;
-        }
     }
 }
